# serializer version: 1
# name: test_command_help_matches_snapshot[agent]
  '''
  
   Usage: aai agent [OPTIONS] [SOURCE]
  
   Have a live two-way voice conversation with an AssemblyAI voice agent.
  
   Use headphones: the mic stays open while the agent speaks, so on speakers it
   would
   hear itself and loop. Pass an audio file/URL (or --sample) to speak a recorded
   clip to
   the agent instead of the microphone; the session then ends after the agent's
   reply.
  
   This only runs a conversation in the terminal — it writes no code. To build
   a voice agent app, run 'aai init voice-agent' instead.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   source      [SOURCE]  Audio file path or URL to speak to the agent. Omit   │
  │                         to use the microphone.                               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --sample                                   Speak the hosted wildfires.mp3    │
  │                                            sample to the agent.              │
  │ --voice                       TEXT         Agent voice. See --list-voices.   │
  │                                            [default: ivy]                    │
  │ --system-prompt               TEXT         System prompt (the agent's        │
  │                                            persona).                         │
  │                                            [default: You are a friendly      │
  │                                            voice assistant having a casual   │
  │                                            conversation. Keep replies short  │
  │                                            and natural, usually one or two   │
  │                                            sentences. Speak the way a person │
  │                                            would in real conversation:       │
  │                                            relaxed, low-key, no exclamation  │
  │                                            marks.]                           │
  │ --system-prompt-file          FILE         Read the system prompt from a     │
  │                                            file (overrides --system-prompt). │
  │ --greeting                    TEXT         Spoken greeting.                  │
  │                                            [default: Hey, what's on your     │
  │                                            mind?]                            │
  │ --device                      INTEGER      Microphone device index.          │
  │ --list-voices                              Print known voices and exit.      │
  │ --json                -j                   Emit newline-delimited JSON       │
  │                                            events.                           │
  │ --output              -o      [text|json]  Output mode: text (you:/agent:    │
  │                                            lines as plain stdout,            │
  │                                            pipe-friendly) or json.           │
  │ --show-code                                Print the equivalent Python SDK   │
  │                                            code and exit (does not start a   │
  │                                            session).                         │
  │ --help                                     Show this message and exit.       │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Start a live voice conversation
   $ aai agent
   Pick a voice and opening line
   $ aai agent --voice james --greeting "Hi there"
   Give the agent a persona
   $ aai agent --system-prompt "You are a terse pirate."
   See available voices
   $ aai agent --list-voices
   Print equivalent Python instead of running
   $ aai agent --show-code
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[audit]
  '''
  
   Usage: aai audit [OPTIONS]
  
   List recent audit-log entries for your account.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --limit                   INTEGER  How many entries to show. [default: 20]   │
  │ --action                  TEXT     Filter by raw action name.                │
  │ --resource                TEXT     Filter by raw resource type.              │
  │ --include-logins                   Show successful login events.             │
  │ --json            -j               Output raw JSON.                          │
  │ --help                             Show this message and exit.               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Recent audit-log entries
   $ aai audit
   Show more entries
   $ aai audit --limit 100
   Include login events
   $ aai audit --include-logins
   Filter by action
   $ aai audit --action token.create
   Filter by resource, as JSON
   $ aai audit --resource token --json
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[balance]
  '''
  
   Usage: aai balance [OPTIONS]
  
   Show your remaining account balance.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Show your remaining balance
   $ aai balance
   Get the raw cents for scripting
   $ aai balance --json | jq '.balance_in_cents'
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[deploy]
  '''
  
   Usage: aai deploy [OPTIONS]
  
   Deploy the current project to Vercel (default), Railway, or Fly.io.
  
   Asks for confirmation first, then runs the target's CLI (`vercel deploy`,
   `railway up`, or `fly launch`). Requires that target's CLI to be installed.
   (Render deploys from a connected Git repo — see the project README.)
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --prod               Deploy to production (Vercel only).                     │
  │ --vercel             Deploy to Vercel (the default).                         │
  │ --railway            Deploy to Railway.                                      │
  │ --fly                Deploy to Fly.io.                                       │
  │ --yes      -y        Skip the confirmation prompt.                           │
  │ --help               Show this message and exit.                             │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Deploy a preview to Vercel (asks first)
   $ aai deploy
   Deploy to production on Vercel
   $ aai deploy --prod --yes
   Deploy to Railway
   $ aai deploy --railway
   Deploy to Fly.io
   $ aai deploy --fly
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[dev]
  '''
  
   Usage: aai dev [OPTIONS]
  
   Launch the dev server for the app in the current directory.
  
   Run this from inside a project created by `aai init`. It installs dependencies
   if needed, then starts the FastAPI server with live reload and opens the
   browser.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --port                INTEGER  Local server port. [default: 3000]            │
  │ --host                TEXT     Interface to bind. Loopback by default; pass  │
  │                                0.0.0.0 to expose on your network.            │
  │                                [default: 127.0.0.1]                          │
  │ --no-open                      Launch, but don't open the browser.           │
  │ --no-install                   Skip dependency install; launch directly.     │
  │ --json        -j               Output raw JSON.                              │
  │ --help                         Show this message and exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Launch the app in the current directory
   $ aai dev
   Use a specific port
   $ aai dev --port 8000
   Launch without opening a browser
   $ aai dev --no-open
   Skip the dependency install step
   $ aai dev --no-install
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[doctor]
  '''
  
   Usage: aai doctor [OPTIONS]
  
   Check that your environment is ready to use AssemblyAI.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Check your environment is ready
   $ aai doctor
   Output results as JSON
   $ aai doctor --json
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[init]
  '''
  
   Usage: aai init [OPTIONS] [TEMPLATE] [DIRECTORY]
  
   Scaffold a new project from a template, then launch it.
  
   This is the starting point for creating an app — including a voice agent app
   ('aai init voice-agent'). The 'aai agent' command only runs a live mic
   conversation and writes no code.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   template       [TEMPLATE]   Template to scaffold: audio-transcription,     │
  │                               live-captions, voice-agent (omit to pick       │
  │                               interactively).                                │
  │   directory      [DIRECTORY]  Target directory (default: <template>).        │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --no-install                   Scaffold only; don't install or launch.       │
  │ --no-open                      Install + launch, but don't open the browser. │
  │ --force                        Overwrite a non-empty target directory.       │
  │ --here                         Scaffold into the current directory.          │
  │ --port                INTEGER  Local server port. [default: 3000]            │
  │ --json        -j               Output raw JSON.                              │
  │ --help                         Show this message and exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Scaffold a new app interactively
   $ aai init
   Scaffold an audio transcription app into ./my-app
   $ aai init audio-transcription my-app
   Scaffold a voice agent app
   $ aai init voice-agent
   Scaffold into the current directory
   $ aai init audio-transcription --here
   Scaffold only, without installing or launching
   $ aai init audio-transcription --no-install
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[keys_create]
  '''
  
   Usage: aai keys create [OPTIONS]
  
   Create a new API key. Prints the key value once — copy it now.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ *  --name             TEXT     A label for the new key. [required]           │
  │    --project          INTEGER  Project id to create the key in (defaults to  │
  │                                your first).                                  │
  │    --json     -j               Output raw JSON.                              │
  │    --help                      Show this message and exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Create a key in your default project
   $ aai keys create --name ci-pipeline
   Create a key in a specific project
   $ aai keys create --name prod --project 7
   Capture the new key into an env var
   $ export ASSEMBLYAI_API_KEY=$(aai keys create --name ci --json | jq -r
   '.api_key')
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[keys_list]
  '''
  
   Usage: aai keys list [OPTIONS]
  
   List API keys across your projects (keys shown masked).
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   List your API keys (masked)
   $ aai keys list
   As JSON for scripting
   $ aai keys list --json
   Get key ids to use with rename
   $ aai keys list --json | jq '.[].id'
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[keys_rename]
  '''
  
   Usage: aai keys rename [OPTIONS] TOKEN_ID NEW_NAME
  
   Rename an existing API key.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │ *    token_id      INTEGER  The key id (see `aai keys list`). [required]     │
  │ *    new_name      TEXT     The new label. [required]                        │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Relabel a key (id from `aai keys list`)
   $ aai keys rename 123 "prod"
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[limits]
  '''
  
   Usage: aai limits [OPTIONS]
  
   Show your account's rate limits per service.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Show rate limits per service
   $ aai limits
   As JSON for scripting
   $ aai limits --json
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[llm]
  '''
  
   Usage: aai llm [OPTIONS] [PROMPT]
  
   Send a prompt to AssemblyAI's LLM Gateway and print the response.
  
   With --transcript-id the transcript's text is injected server-side, so you
   can ask questions about a past transcription (e.g. aai llm "summarize"
   --transcript-id ID).
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   prompt      [PROMPT]  The prompt to send to the model.                     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --model                  TEXT         LLM Gateway model.                     │
  │                                       [default: claude-haiku-4-5-20251001]   │
  │ --transcript-id          TEXT         Inject this transcript's text into the │
  │                                       prompt.                                │
  │ --system                 TEXT         Optional system prompt.                │
  │ --follow         -f                   Re-run the prompt over a growing       │
  │                                       transcript piped on stdin, refreshing  │
  │                                       the answer in place on every finalized │
  │                                       turn (e.g. aai stream -o text | aai    │
  │                                       llm -f "summarize action items as I    │
  │                                       talk"). Ctrl-C to stop.                │
  │ --output         -o      [text|json]  Print one field of the result: text    │
  │                                       (just the answer, pipe-friendly) or    │
  │                                       json.                                  │
  │ --max-tokens             INTEGER      Max tokens to generate.                │
  │                                       [default: 1000]                        │
  │ --list-models                         Print known models and exit.           │
  │ --json           -j                   Output raw JSON (one object per turn   │
  │                                       in --follow mode).                     │
  │ --help                                Show this message and exit.            │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Ask about a past transcript
   $ aai llm "summarize the key decisions" --transcript-id 5551234-abcd
   Pipe any text in
   $ echo "meeting notes" | aai llm "turn into action items"
   Pick a model and add a system prompt
   $ aai llm "draft a follow-up email" --model claude-opus-4-7 --system "Be
   concise."
   See available models
   $ aai llm --list-models
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[login]
  '''
  
   Usage: aai login [OPTIONS]
  
   Authenticate via your browser; stores a CLI API key.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --api-key          TEXT  Provide key non-interactively.                      │
  │ --json     -j            Output raw JSON.                                    │
  │ --help                   Show this message and exit.                         │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Log in with your browser
   $ aai login
   Log in non-interactively (CI)
   $ aai login --api-key sk_...
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[logout]
  '''
  
   Usage: aai logout [OPTIONS]
  
   Clear stored credentials for the active profile.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Clear stored credentials for the active profile
   $ aai logout
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[onboard]
  '''
  
   Usage: aai onboard [OPTIONS]
  
   Guided setup: sign in, run your first transcription, and start building.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json             -j        Output raw JSON.                                │
  │ --non-interactive            Run without interactive prompts (default when   │
  │                              agent detected).                                │
  │ --help                       Show this message and exit.                     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Run the guided setup
   $ aai onboard
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[sessions_get]
  '''
  
   Usage: aai sessions get [OPTIONS] SESSION_ID
  
   Show details for one streaming session.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │ *    session_id      TEXT  Streaming session id. [required]                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Show one session's details
   $ aai sessions get sess_5551234
   Raw JSON for one session
   $ aai sessions get sess_5551234 --json
   Drill into the latest session
   $ aai sessions get $(aai sessions list --json | jq -r '.[0].session_id')
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[sessions_list]
  '''
  
   Usage: aai sessions list [OPTIONS]
  
   List recent streaming sessions.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --limit           INTEGER  How many sessions to show. [default: 10]          │
  │ --status          TEXT     Filter: created, completed, or error.             │
  │ --json    -j               Output raw JSON.                                  │
  │ --help                     Show this message and exit.                       │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   List recent streaming sessions
   $ aai sessions list
   Find failed sessions
   $ aai sessions list --status error
   Inspect the most recent session
   $ aai sessions get $(aai sessions list --json | jq -r '.[0].session_id')
   Total audio across recent sessions (seconds)
   $ aai sessions list --json | jq '[.[].audio_duration_sec] | add'
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[setup_install]
  '''
  
   Usage: aai setup install [OPTIONS]
  
   Set up your coding agent for AssemblyAI (docs MCP server + skills).
  
   Installs three things: the assemblyai-docs MCP server (live API docs, via
   `claude mcp add`), the AssemblyAI skill (via `npx skills add`), and the
   bundled
   aai-cli skill (copied from this package, no network). Each step is idempotent
   and skipped if already present unless --force.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --scope          [user|project|local]  Config scope to register the MCP      │
  │                                        under. Presence is detected across    │
  │                                        all scopes.                           │
  │                                        [default: user]                       │
  │ --force                                Reinstall even if already present.    │
  │ --json   -j                            Output raw JSON.                      │
  │ --help                                 Show this message and exit.           │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Set up your coding agent for AssemblyAI
   $ aai setup install
   Install for the current project only
   $ aai setup install --scope project
   Reinstall everything even if already present
   $ aai setup install --force
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[setup_remove]
  '''
  
   Usage: aai setup remove [OPTIONS]
  
   Remove the AssemblyAI MCP server and skills from your coding agent.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --scope          [user|project|local]  Only remove the MCP from this scope.  │
  │                                        Default: remove from whichever scope  │
  │                                        it exists in.                         │
  │ --json   -j                            Output raw JSON.                      │
  │ --help                                 Show this message and exit.           │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Remove the AssemblyAI MCP server and skills
   $ aai setup remove
   Remove only from the project scope
   $ aai setup remove --scope project
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[setup_status]
  '''
  
   Usage: aai setup status [OPTIONS]
  
   Show whether the AssemblyAI MCP server and skills are set up in your coding
   agent.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Show what's set up
   $ aai setup status
   Print status as JSON
   $ aai setup status --json
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[share]
  '''
  
   Usage: aai share [OPTIONS]
  
   Boot the app and expose it on a public URL via a cloudflared tunnel.
  
   Run this from inside a project created by `aai init`. It starts the dev server
   and
   opens a cloudflared quick tunnel, printing a shareable
   https://*.trycloudflare.com
   URL. Requires cloudflared (macOS: `brew install cloudflared`; other platforms:
   https://developers.cloudflare.com/cloudflare-one/connections/connect-networks/
   downloads/).
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --port                INTEGER  Local server port. [default: 3000]            │
  │ --no-install                   Skip dependency install; launch directly.     │
  │ --json        -j               Output raw JSON.                              │
  │ --help                         Show this message and exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Share the running app on a public URL
   $ aai share
   Use a specific local port
   $ aai share --port 8000
   Skip the dependency install step
   $ aai share --no-install
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[speak]
  '''
  
   Usage: aai speak [OPTIONS] [TEXT]
  
   Synthesize speech from text with AssemblyAI streaming TTS (sandbox only).
  
   Plays the audio through your speakers by default, or writes a WAV with --out.
   Speaker-labeled input (from 'aai transcribe --speaker-labels') is detected
   automatically: the labels are stripped and each speaker gets a different
   voice. This feature only exists in the sandbox today — run it with --sandbox.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   text      [TEXT]  Text to speak. Omit to read from stdin.                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --voice                TEXT     Voice id, or SPEAKER=VOICE for diarized      │
  │                                 input (repeatable, e.g. --voice A=jane).     │
  │ --language             TEXT     Language of the text. [default: English]     │
  │ --sample-rate          INTEGER  Output sample rate in Hz. Server default if  │
  │                                 omitted.                                     │
  │ --out                  PATH     Write a WAV file instead of playing through  │
  │                                 the speakers.                                │
  │ --json         -j               Emit JSON metadata about the synthesized     │
  │                                 audio.                                       │
  │ --help                          Show this message and exit.                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Speak text aloud (sandbox only)
   $ aai speak "Hello there, friend." --sandbox
   Pick a voice and language
   $ aai speak "Bonjour" --voice jane --language French --sandbox
   Speak a diarized transcript, one voice per speaker
   $ aai transcribe meeting.mp3 --speaker-labels | aai speak --sandbox
   Override a speaker's voice
   $ … | aai speak --voice A=vera --voice B=paul --sandbox
   Save to a WAV instead of playing
   $ aai speak "Hello" --out /tmp/hello.wav --sandbox
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[stream]
  '''
  
   Usage: aai stream [OPTIONS] [SOURCE]
  
   Transcribe live audio in real time — from your mic, a file, a URL, or a pipe.
  
   Pass - as the source to read raw PCM16/mono/16k audio on stdin, e.g.
   ffmpeg -i input.mp4 -f s16le -ar 16000 -ac 1 - | aai stream -.
  
   --prompt biases the speech model. --llm runs a prompt over the live transcript
   in-process, refreshing the answer on every finalized turn; for a separate step
   instead, pipe the text out with -o text | aai llm -f "…".
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   source      [SOURCE]  Audio file path, URL, or YouTube/podcast page URL to │
  │                         stream. Use - for raw PCM16/mono/16k on stdin. Omit  │
  │                         to use the microphone.                               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --sample                          Stream the hosted wildfires.mp3 sample.    │
  │ --json       -j                   Emit newline-delimited JSON events.        │
  │ --output     -o      [text|json]  Output mode: text (finalized turns as      │
  │                                   plain lines, pipe-friendly) or json.       │
  │ --show-code                       Print the equivalent Python SDK code and   │
  │                                   exit (does not stream).                    │
  │ --help                            Show this message and exit.                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Audio Capture ──────────────────────────────────────────────────────────────╮
  │ --sample-rate              INTEGER  Force a microphone capture rate in Hz    │
  │                                     (default: device native).                │
  │ --device                   INTEGER  Microphone device index.                 │
  │ --system-audio                      macOS only: stream system/app audio and  │
  │                                     microphone as separate sessions.         │
  │ --system-audio-only                 macOS only: stream system/app audio      │
  │                                     without the microphone.                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Model & Language ───────────────────────────────────────────────────────────╮
  │ --speech-model              [universal-streaming-m  Streaming speech model.  │
  │                             ultilingual|universal-  [default: u3-rt-pro]     │
  │                             streaming-english|u3-r                           │
  │                             t-pro|whisper-rt|u3-pr                           │
  │                             o]                                               │
  │ --encoding                  [pcm_s16le|pcm_mulaw]   Audio encoding.          │
  │ --language-detection                                Auto-detect the spoken   │
  │                                                     language.                │
  │ --domain                    TEXT                    Domain preset (e.g.      │
  │                                                     medical).                │
  │ --prompt                    TEXT                    Prompt to bias the       │
  │                                                     speech model (supported  │
  │                                                     models only).            │
  │ --keyterms-prompt           TEXT                    Boost a key term         │
  │                                                     (repeatable).            │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Turn Detection ─────────────────────────────────────────────────────────────╮
  │ --end-of-turn-confidence                         FLOAT RANGE   End-of-turn   │
  │                                                  [0.0<=x<=1.0  confidence    │
  │                                                  ]             (0-1).        │
  │ --min-turn-silence                               INTEGER       Min silence   │
  │                                                                to end a turn │
  │                                                                (ms).         │
  │ --max-turn-silence                               INTEGER       Max silence   │
  │                                                                before ending │
  │                                                                a turn (ms).  │
  │ --vad-threshold                                  FLOAT RANGE   Voice         │
  │                                                  [0.0<=x<=1.0  activity      │
  │                                                  ]             threshold     │
  │                                                                (0-1).        │
  │ --format-turns              --no-format-turns                  Format        │
  │                                                                (punctuate)   │
  │                                                                finalized     │
  │                                                                turns.        │
  │ --include-partial-turns                                        Emit partial  │
  │                                                                turns.        │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Speakers & Channels ────────────────────────────────────────────────────────╮
  │ --speaker-labels                              Diarize speakers. With system  │
  │                                               audio the mic stays "You";     │
  │                                               only the system audio is split │
  │                                               into speakers.                 │
  │ --max-speakers          INTEGER RANGE [x>=1]  Max speakers.                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Features ───────────────────────────────────────────────────────────────────╮
  │ --voice-focus                  [near-field|far-field  Voice focus (noise     │
  │                                ]                      suppression model).    │
  │ --voice-focus-threshold        FLOAT RANGE            Voice-focus threshold  │
  │                                [0.0<=x<=1.0]          (0-1).                 │
  │ --inactivity-timeout           INTEGER                Auto-close after N     │
  │                                                       seconds idle.          │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Guardrails ─────────────────────────────────────────────────────────────────╮
  │ --filter-profanity               Mask profanity.                             │
  │ --redact-pii                     Redact PII from turns.                      │
  │ --redact-pii-policy        TEXT  Comma-separated PII policies.               │
  │ --redact-pii-sub           TEXT  Replace redacted PII with: hash or          │
  │                                  entity_name.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Webhooks ───────────────────────────────────────────────────────────────────╮
  │ --webhook-url                TEXT        Webhook URL.                        │
  │ --webhook-auth-header        NAME:VALUE  Webhook auth header as NAME:VALUE.  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ LLM Transform ──────────────────────────────────────────────────────────────╮
  │ --llm                 TEXT                  Run a prompt over the live       │
  │                                             transcript through LLM Gateway,  │
  │                                             refreshing the answer on every   │
  │                                             finalized turn. Repeatable: each │
  │                                             prompt runs on the previous      │
  │                                             one's response (a chain).        │
  │ --llm-interval        FLOAT RANGE [x>=0.0]  Seconds between --llm summary    │
  │                                             refreshes (0 refreshes on every  │
  │                                             turn).                           │
  │                                             [default: 10.0]                  │
  │ --model               TEXT                  LLM Gateway model.               │
  │                                             [default:                        │
  │                                             claude-haiku-4-5-20251001]       │
  │ --max-tokens          INTEGER               Max tokens. [default: 1000]      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Advanced ───────────────────────────────────────────────────────────────────╮
  │ --config             KEY=VALUE  Set any StreamingParameters field as         │
  │                                 KEY=VALUE (repeatable).                      │
  │ --config-file        FILE       JSON file of streaming fields.               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Stream from your microphone
   $ aai stream
   Stream a file or URL in real time
   $ aai stream recording.wav
   Stream the hosted sample
   $ aai stream --sample
   Label speakers in the live transcript
   $ aai stream --speaker-labels
   Boost domain terms with keyterm prompts
   $ aai stream --keyterms-prompt "AssemblyAI" --keyterms-prompt "Claude"
   Summarize action items live as you talk
   $ aai stream --llm "summarize action items"
   Print equivalent Python instead of running
   $ aai stream --show-code
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[transcribe]
  '''
  
   Usage: aai transcribe [OPTIONS] [SOURCE]
  
   Transcribe an audio file, URL, or YouTube/podcast link.
  
   Quickest start: aai transcribe call.mp3 (or --sample for the hosted demo).
  
   Save with --out FILE, or pipe one field with -o text. YouTube and podcast-page
   URLs (any page yt-dlp can extract) are downloaded first, then transcribed.
  
   Curated flags cover common features; --config KEY=VALUE and --config-file
   reach
   every other field. Analysis (summary, chapters, ...) renders in human mode.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   source      [SOURCE]  Audio file, URL, or YouTube/podcast URL.             │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --sample                                         Use the hosted              │
  │                                                  wildfires.mp3 sample.       │
  │ --json       -j                                  Output the full result as   │
  │                                                  JSON. Text stays the        │
  │                                                  default even when piped;    │
  │                                                  opt in here (same as -o     │
  │                                                  json).                      │
  │ --output     -o      [text|id|status|utterances  Print one field: text, id,  │
  │                      |srt|json]                  status, utterances, srt     │
  │                                                  (captions), or json.        │
  │ --out                FILE                        Save the result to a file   │
  │                                                  instead of printing it      │
  │                                                  (clean text; pairs with     │
  │                                                  -o).                        │
  │ --show-code                                      Print the equivalent Python │
  │                                                  SDK code and exit (does not │
  │                                                  transcribe).                │
  │ --help                                           Show this message and exit. │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Model & Language ───────────────────────────────────────────────────────────╮
  │ --speech-model              [best|nano|slam-1|univ  Speech model.            │
  │                             ersal]                                           │
  │ --language-code             TEXT                    Force a language (e.g.   │
  │                                                     en_us).                  │
  │ --language-detection                                Auto-detect the spoken   │
  │                                                     language.                │
  │ --keyterms-prompt           TEXT                    Boost a key term         │
  │                                                     (repeatable).            │
  │ --temperature               FLOAT                   Speech model             │
  │                                                     temperature.             │
  │ --prompt                    TEXT                    Prompt to bias the       │
  │                                                     speech model (supported  │
  │                                                     models only).            │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Formatting ─────────────────────────────────────────────────────────────────╮
  │ --punctuate       --no-punctuate        Add punctuation.                     │
  │ --format-text     --no-format-text      Apply text formatting (casing,       │
  │                                         numbers).                            │
  │ --disfluencies                          Keep filler words (e.g. um, uh).     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Speakers & Channels ────────────────────────────────────────────────────────╮
  │ --speaker-labels                                 Enable diarization.         │
  │ --speakers-expected        INTEGER RANGE [x>=1]  Hint speaker count.         │
  │ --multichannel                                   Transcribe each audio       │
  │                                                  channel separately.         │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Guardrails ─────────────────────────────────────────────────────────────────╮
  │ --redact-pii                                            Redact PII from the  │
  │                                                         transcript.          │
  │ --redact-pii-policy                TEXT                 Comma-separated PII  │
  │                                                         policies (e.g.       │
  │                                                         person_name,...).    │
  │ --redact-pii-sub                   [hash|entity_name]   How to replace       │
  │                                                         redacted PII.        │
  │ --redact-pii-audio                                      Also redact audio.   │
  │ --filter-profanity                                      Mask profanity.      │
  │ --content-safety                                        Detect sensitive     │
  │                                                         content.             │
  │ --content-safety-confidence        INTEGER RANGE        Content-safety       │
  │                                    [25<=x<=100]         confidence threshold │
  │                                                         (25-100).            │
  │ --speech-threshold                 FLOAT RANGE          Minimum proportion   │
  │                                    [0.0<=x<=1.0]        of speech required   │
  │                                                         (0-1).               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Analysis ───────────────────────────────────────────────────────────────────╮
  │ --summarization                                      Summarize the           │
  │                                                      transcript.             │
  │ --summary-model             [informative|conversati  Summary model.          │
  │                             onal|catchy]                                     │
  │ --summary-type              [bullets|bullets_verbos  Summary format.         │
  │                             e|gist|headline|paragra                          │
  │                             ph]                                              │
  │ --auto-chapters                                      Generate chapters.      │
  │ --sentiment-analysis                                 Analyze sentiment.      │
  │ --entity-detection                                   Detect entities.        │
  │ --auto-highlights                                    Detect key phrases.     │
  │ --topic-detection                                    Detect IAB topics.      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Customization ──────────────────────────────────────────────────────────────╮
  │ --word-boost                  TEXT                  Boost a word             │
  │                                                     (repeatable).            │
  │ --custom-spelling-file        FILE                  JSON map of custom       │
  │                                                     spellings.               │
  │ --audio-start                 INTEGER RANGE [x>=0]  Start offset in ms.      │
  │ --audio-end                   INTEGER               End offset in ms.        │
  │ --download-sections           TEXT                  For a YouTube/podcast    │
  │                                                     URL, download only part  │
  │                                                     of the source (yt-dlp    │
  │                                                     "--download-sections"    │
  │                                                     syntax, e.g.             │
  │                                                     "*0:00-5:00" for the     │
  │                                                     first five minutes;      │
  │                                                     repeatable).             │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Webhooks ───────────────────────────────────────────────────────────────────╮
  │ --webhook-url                TEXT        Webhook URL for completion.         │
  │ --webhook-auth-header        NAME:VALUE  Webhook auth header as NAME:VALUE.  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Translation ────────────────────────────────────────────────────────────────╮
  │ --translate-to        TEXT  Translate transcript to a language (repeatable). │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Advanced ───────────────────────────────────────────────────────────────────╮
  │ --config             KEY=VALUE  Set any TranscriptionConfig field as         │
  │                                 KEY=VALUE (repeatable).                      │
  │ --config-file        FILE       JSON file of config fields.                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ LLM Transform ──────────────────────────────────────────────────────────────╮
  │ --llm               TEXT     Transform the finished transcript through LLM   │
  │                              Gateway. Repeatable: each prompt runs on the    │
  │                              previous one's response (a chain), the first on │
  │                              the transcript.                                 │
  │ --model             TEXT     LLM Gateway model.                              │
  │                              [default: claude-haiku-4-5-20251001]            │
  │ --max-tokens        INTEGER  Max tokens. [default: 1000]                     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Transcribe a local file
   $ aai transcribe call.mp3
   Try it with the hosted sample
   $ aai transcribe --sample
   Transcribe a YouTube video
   $ aai transcribe https://youtu.be/dtp6b76pMak
   Transcribe a podcast episode page
   $ aai transcribe "https://podcasts.apple.com/…"
   Label who said what
   $ aai transcribe call.mp3 --speaker-labels
   Redact PII for compliance
   $ aai transcribe call.mp3 --redact-pii
   Summarize a recording
   $ aai transcribe call.mp3 --summarization
   Ask about the transcript
   $ aai transcribe call.mp3 --llm "List the action items"
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[transcripts_get]
  '''
  
   Usage: aai transcripts get [OPTIONS] TRANSCRIPT_ID
  
   Fetch a past transcript by id and print its text.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │ *    transcript_id      TEXT  Transcript id. [required]                      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --output  -o      [text|id|status|utterances|s  Print one field of the       │
  │                   rt|json]                      result.                      │
  │ --json    -j                                    Output raw JSON.             │
  │ --help                                          Show this message and exit.  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Fetch a transcript's text by id
   $ aai transcripts get 5551234-abcd
   Speaker-labeled turns
   $ aai transcripts get 5551234-abcd -o utterances
   Save SRT subtitles
   $ aai transcripts get 5551234-abcd -o srt > captions.srt
   Get the raw JSON
   $ aai transcripts get 5551234-abcd --json
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[transcripts_list]
  '''
  
   Usage: aai transcripts list [OPTIONS]
  
   List recent transcripts.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --limit          INTEGER RANGE [x>=1]  How many transcripts to show.         │
  │                                        [default: 10]                         │
  │ --json   -j                            Output raw JSON.                      │
  │ --help                                 Show this message and exit.           │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   List your recent transcripts
   $ aai transcripts list
   Show more at once
   $ aai transcripts list --limit 50
   Grab the latest transcript id
   $ aai transcripts list --json | jq -r '.[0].id'
   Summarize your latest transcript
   $ aai llm "summarize" --transcript-id $(aai transcripts list --json | jq -r
   '.[0].id')
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[usage]
  '''
  
   Usage: aai usage [OPTIONS]
  
   Show usage over a date range (defaults to the last 30 days).
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --start                       TEXT  Start date (YYYY-MM-DD). Default: 30d    │
  │                                     ago.                                     │
  │ --end                         TEXT  End date (YYYY-MM-DD). Default: today.   │
  │ --window                      TEXT  Window size, e.g. 'day' or 'month'.      │
  │ --include-zero,--all                Include zero-usage windows (matches      │
  │                                     --include-logins on `aai audit`).        │
  │ --json                -j            Output raw JSON.                         │
  │ --help                              Show this message and exit.              │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Usage over the last 30 days
   $ aai usage
   A specific date range
   $ aai usage --start 2026-05-01 --end 2026-06-01
   Break spend down by month
   $ aai usage --window month
   Total spend in cents for scripting
   $ aai usage --json | jq '[.usage_items[].line_items[].price] | add'
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[whoami]
  '''
  
   Usage: aai whoami [OPTIONS]
  
   Show the active profile and whether its key is usable.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Show the active profile and whether its key works
   $ aai whoami
  
  
  
  '''
# ---
# name: test_error_human_render_matches_snapshot[api_no_suggestion]
  '''
  Error: Transcription request failed: boom.
  
  '''
# ---
# name: test_error_human_render_matches_snapshot[not_authenticated]
  '''
  Error: You're not signed in.
  Suggestion: Run 'aai onboard' for guided setup, 'aai login' if you have an
  account, or set ASSEMBLYAI_API_KEY.
  
  '''
# ---
# name: test_error_human_render_matches_snapshot[plain_no_suggestion]
  '''
  Error: Something went wrong.
  
  '''
# ---
# name: test_error_human_render_matches_snapshot[rejected_key]
  '''
  Error: Your API key was rejected.
  Suggestion: Run 'aai login' with a valid key, or set ASSEMBLYAI_API_KEY.
  
  '''
# ---
# name: test_error_human_render_matches_snapshot[usage_with_suggestion]
  '''
  Error: Unknown voice 'nope'.
  Suggestion: Run 'aai agent --list-voices' to see the options.
  
  '''
# ---
# name: test_error_json_render_matches_snapshot[api_no_suggestion]
  '''
  {"error": {"type": "api_error", "message": "Transcription request failed: boom."}}
  
  '''
# ---
# name: test_error_json_render_matches_snapshot[not_authenticated]
  '''
  {"error": {"type": "not_authenticated", "message": "You're not signed in.", "suggestion": "Run 'aai onboard' for guided setup, 'aai login' if you have an account, or set ASSEMBLYAI_API_KEY."}}
  
  '''
# ---
# name: test_error_json_render_matches_snapshot[plain_no_suggestion]
  '''
  {"error": {"type": "error", "message": "Something went wrong."}}
  
  '''
# ---
# name: test_error_json_render_matches_snapshot[rejected_key]
  '''
  {"error": {"type": "not_authenticated", "message": "Your API key was rejected.", "suggestion": "Run 'aai login' with a valid key, or set ASSEMBLYAI_API_KEY."}}
  
  '''
# ---
# name: test_error_json_render_matches_snapshot[usage_with_suggestion]
  '''
  {"error": {"type": "usage_error", "message": "Unknown voice 'nope'.", "suggestion": "Run 'aai agent --list-voices' to see the options."}}
  
  '''
# ---
